Added the FAQ page. Also added dummy redirects for old site pages.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -55,6 +55,7 @@
 	<li><a href ="{{ site.baseurl }}/pages/main/still_to_come.html" >Still to Come</a></li>
 	<li><a href ="{{ site.baseurl }}/pages/main/support.html" >Support</a></li>
 	<li><a href ="{{ site.baseurl }}/pages/main/download.html" >Download</a></li>
+	<li><a href ="{{ site.baseurl }}/pages/main/faq.html" >FAQ</a></li>
 	<!--  {% for p in site.pages %}
       <li>
         <a href="{{ site.baseurl }}{{ p.url }}">
