Changing the home page,title of the page.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,7 +4,7 @@
     {% capture site_url %}{{ site.url }}{{ site.baseurl }}{% endcapture %}
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Bot-Bot by Imaginea</title>
+    <title>Android automation testing tool - Bot-bot | {{page.title}}</title>
     
     <link rel="stylesheet" href="{{ site_url }}/stylesheets/styles.css">
     <link rel="stylesheet" href="{{ site_url }}/stylesheets/pygment_trac.css">
@@ -22,7 +22,7 @@
 <span class="header1"><a href="https://github.com/Imaginea/bot-bot">Bot-Bot</a></span>
 <span class="header3"> by</span>
 <span class="header2"> <a href="https://github.com/Imaginea">Imaginea</a></span>
-</br><span class="header3">Native android automation tool with record and replay features</span>
+</br><span class="header3">Android automation testing tool with record and replay features</span>
 <a href="https://github.com/Imaginea/bot-bot"  target="_blank"><img class="fork" src="{{ site_url }}/images/forkme_right_darkblue_121621.png" alt="Fork me on GitHub" /></a>
       </div>
 <div class="main-content">
