Added release notes for v-0.82 release. Also added get started page

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,6 +29,7 @@
     <div class="leftnav">
 	<ol >
 	  <li><a href ="{{ site.baseurl }}/index.html" >Home</a></li>
+	  <li><a href ="{{ site.baseurl }}/pages/get_started.html" >Get started with bot-bot</a></li>
 	  <li><a href ="{{ site.baseurl }}/pages/main/features.html" >Features</a></li>
           <li><a href ="{{ site.baseurl }}/pages/server/server.html" >Server</a>
 		<ol>
@@ -39,7 +40,8 @@
 	  </li>
 	<li><a href ="{{ site.baseurl }}/pages/recorder/recorder.html" >Recorder</a>
 		<ol>
-		<li><a href ="{{ site.baseurl }}/pages/recorder/recorder_installation.html" >Installation</a></li>
+		<li><a href ="{{ site.baseurl }}/pages/recorder/recorder_integration_from_src.html" >Integration with source</a></li>
+		<li><a href ="{{ site.baseurl }}/pages/recorder/recorder_configuration.html" >Configuration</a></li>
 		</ol>
 	</li>
 	<li><a href ="{{ site.baseurl }}/pages/runner/runner.html" >Runner</a>
