Updating the FAQ

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -69,7 +69,7 @@
     </div>
     <div class="main-content-ctr">
       <header>
-	<h1 id='{{ page.title | downcase | replace(' ', '_') }}'>{{ page.heading }}</h1>
+	<h1 >{{ page.heading }}</h1>
 	<p/>
         <p class="view"><a href="https://github.com/Imaginea/bot-bot">View the Project on GitHub <small>menonvarun/site</small></a></p>
         <ul>
